name:                domplate
version:             0.1.0.0
synopsis:            A simple templating library using HTML5 as its template language.
-- description:         
homepage:            https://github.com/valderman/domplate
license:             BSD3
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Text.Domplate,
    Text.Domplate.ContextParser
  other-modules:
    Text.Domplate.Context,
    Text.Domplate.Replace
  other-extensions:
    OverloadedStrings
  build-depends:
    base >=4.5 && <4.8,
    text >=1.2,
    parsec >=3.1,
    containers >=0.5,
    tagsoup >=0.13
  default-language:
    Haskell2010
